# profiler-collector-cpp

./: CMakeLists.txt  README.md
src/: collector.cpp  collector.hpp  collector_main.cpp  main.cpp  producer.cpp  prometheus_store.cpp  prometheus_store.hpp  reader.cpp  reader.hpp  stack_trie.cpp  stack_trie.hpp  stdin_main.cpp
src/core/: reader.cpp  reader.hpp  stack_trie.cpp  stack_trie.hpp  trace_parser.cpp
src/parser/: trace_parser.cpp  trace_parser.hpp
src/prometheus/: prometheus_store.cpp  prometheus_store.hpp
src/sandbox/: collector.cpp  globals.h
